--- a/src/rrui/flaskr/templates/base.html
+++ b/src/rrui/flaskr/templates/base.html
@@ -1,8 +1,18 @@
-{%- extends "bootstrap/base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Raspberry Pi Recorder</title>
 
-{% block title %}Raspberry Pi Recorder{% endblock %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='rrui.css') }}">
+</head>
+<body>
+    {% block content %}{% endblock %}
 
-{% block styles -%}
-{{super()}}
-<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='rrui.css')}}">
-{% endblock %}
+    <script src="{{ url_for('static', filename='js/jquery.slim.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+</body>
+</html>
